--- a/build.xml
+++ b/build.xml
@@ -10,15 +10,15 @@
     <!-- Test resources -->
     <property name="validator.jar" value="validationtool-1.0.1-standalone.jar" />
     <property name="xrechnung.version.major.minor" value="1.2" />
-    <property name="xrechnung.version.full" value="${xrechnung.version.major.minor}.1" />
+    <property name="xrechnung.version.full" value="${xrechnung.version.major.minor}.2" />
     <property name="github.group.url" value="https://github.com/itplr-kosit" />
     <property name="validator.download.url" value="${github.group.url}/validationtool/releases/download/validationtool-1_0_1/validationtool-dist-1.0.1-standalone.zip" />
-    
+
     <property name="validator.config.proj.name" value="validator-configuration-xrechnung" />
-    
-    <property name="validator.config.release.date" value="2019-06-24" />
+
+    <property name="validator.config.release.date" value="2019-12-30" />
     <property name="validator.config.download.url" value="${github.group.url}/${validator.config.proj.name}/releases/download/release-${validator.config.release.date}/${validator.config.proj.name}_${xrechnung.version.full}_${validator.config.release.date}.zip" />
-    
+
     <property name="validator.config.release.version" value="release-${validator.config.release.date}" />
     <property name="validator.config.zip" value="validator-configuration-xrechnung_${xrechnung.version.full}_${validator.config.release.date}.zip" />
     <property name="validator.repository.dir" location="${build.dir}/xrechnung-configuration-repository" />
@@ -34,7 +34,7 @@
     <property name="test.transformed.dir" location="${test.build.dir}/transformed" />
     <property name="test.transformed.html.dir" location="${test.build.dir}/html" />
     <property name="test.reports.dir" location="${test.build.dir}/reports" />
-    
+
     <property name="xrechnung.xsd.ns" value="urn:ce.eu:en16931:2017:xoev-de:kosit:standard:xrechnung-1" />
     <target name="init" description="Initializes build directory structure and ISO timestamp">
         <!-- Create timestamps -->
@@ -161,7 +161,7 @@
             <arg value="-h" />
             <arg value="-o" />
             <arg value="${test.reports.dir}" />
-            <arg value="${test.docs.dir}/*.xml" />
+            <arg value="${test.docs.dir}" />
         </java>
     </target>
     <target name="test-html" depends="prepare-vnu,transform-xr-to-html" description="Tests HTML generation with vNU b W3C">
@@ -187,9 +187,12 @@
     </target>
     <target name="test" depends="test-testsuite, test-xr-transformation, test-html" description="Validates source UBL or CII XML against XRechnung,
         transforms to XR Sem Model and schema validates results" />
+
+
     <target name="dist" depends="test">
         <zip destfile="${dist.dir}/xrechnung-${xrechnung.version.full}-${ant.project.name}-${build.date}.zip" basedir="${src.dir}" excludes="download/**,test/**" />
     </target>
+
     <target name="clean">
         <!-- Delete the ${build} and ${dist} directory trees -->
         <delete dir="${build.dir}" verbose="true" includeEmptyDirs="true" />
